feat(templates/spring-rest-api): added taskfile support for docker and openapi stub generation
