# nix/outputs/templates.spring-rest-api/src/main/java/com/example/demo/endpoints/model/NewTask.java
@@ -1,0 +1,145 @@
+package com.example.demo.endpoints.model;
+
+import java.net.URI;
+import java.util.Objects;
+import com.fasterxml.jackson.annotation.JsonInclude;
+import com.fasterxml.jackson.annotation.JsonProperty;
+import com.fasterxml.jackson.annotation.JsonCreator;
+import org.springframework.lang.Nullable;
+import org.openapitools.jackson.nullable.JsonNullable;
+import java.time.OffsetDateTime;
+import jakarta.validation.Valid;
+import jakarta.validation.constraints.*;
+import io.swagger.v3.oas.annotations.media.Schema;
+
+
+import java.util.*;
+import jakarta.annotation.Generated;
+
+/**
+ * NewTask
+ */
+
+@Generated(value = "org.openapitools.codegen.languages.SpringCodegen", date = "2026-08-08T08:54:10.338848230-06:00[America/Denver]", comments = "Generator version: 7.24.0")
+public class NewTask {
+
+  private String title;
+
+  @JsonInclude(JsonInclude.Include.NON_NULL)
+  private @Nullable String description;
+
+  @JsonInclude(JsonInclude.Include.NON_NULL)
+  private Boolean completed = false;
+
+  public NewTask() {
+    super();
+  }
+
+  /**
+   * Constructor with only required parameters
+   */
+  public NewTask(String title) {
+    this.title = title;
+  }
+
+  public NewTask title(String title) {
+    this.title = title;
+    return this;
+  }
+
+  /**
+   * Get title
+   * @return title
+   */
+  @NotNull
+  @Schema(name = "title", example = "Buy groceries", requiredMode = Schema.RequiredMode.REQUIRED)
+  @JsonProperty("title")
+  public String getTitle() {
+    return title;
+  }
+
+  @JsonProperty("title")
+  public void setTitle(String title) {
+    this.title = title;
+  }
+
+  public NewTask description(@Nullable String description) {
+    this.description = description;
+    return this;
+  }
+
+  /**
+   * Get description
+   * @return description
+   */
+
+  @Schema(name = "description", example = "Need to pick up milk, eggs, and bread.", requiredMode = Schema.RequiredMode.NOT_REQUIRED)
+  @JsonProperty("description")
+  public @Nullable String getDescription() {
+    return description;
+  }
+
+  @JsonProperty("description")
+  public void setDescription(@Nullable String description) {
+    this.description = description;
+  }
+
+  public NewTask completed(Boolean completed) {
+    this.completed = completed;
+    return this;
+  }
+
+  /**
+   * Get completed
+   * @return completed
+   */
+
+  @Schema(name = "completed", requiredMode = Schema.RequiredMode.NOT_REQUIRED)
+  @JsonProperty("completed")
+  public Boolean getCompleted() {
+    return completed;
+  }
+
+  @JsonProperty("completed")
+  public void setCompleted(Boolean completed) {
+    this.completed = completed;
+  }
+
+  @Override
+  public boolean equals(Object o) {
+    if (this == o) {
+      return true;
+    }
+    if (o == null || getClass() != o.getClass()) {
+      return false;
+    }
+    NewTask newTask = (NewTask) o;
+    return Objects.equals(this.title, newTask.title) &&
+        Objects.equals(this.description, newTask.description) &&
+        Objects.equals(this.completed, newTask.completed);
+  }
+
+  @Override
+  public int hashCode() {
+    return Objects.hash(title, description, completed);
+  }
+
+  @Override
+  public String toString() {
+    StringBuilder sb = new StringBuilder();
+    sb.append("class NewTask {\n");
+    sb.append("    title: ").append(toIndentedString(title)).append("\n");
+    sb.append("    description: ").append(toIndentedString(description)).append("\n");
+    sb.append("    completed: ").append(toIndentedString(completed)).append("\n");
+    sb.append("}");
+    return sb.toString();
+  }
+
+  /**
+   * Convert the given object to string with each line indented by 4 spaces
+   * (except the first line).
+   */
+  private String toIndentedString(@Nullable Object o) {
+    return o == null ? "null" : o.toString().replace("\n", "\n    ");
+  }
+}
