# nix/outputs/templates.spring-rest-api/src/main/java/com/example/demo/endpoints/model/Task.java
@@ -1,0 +1,201 @@
+package com.example.demo.endpoints.model;
+
+import java.net.URI;
+import java.util.Objects;
+import com.fasterxml.jackson.annotation.JsonInclude;
+import com.fasterxml.jackson.annotation.JsonProperty;
+import com.fasterxml.jackson.annotation.JsonCreator;
+import java.time.OffsetDateTime;
+import java.util.UUID;
+import org.springframework.format.annotation.DateTimeFormat;
+import org.springframework.lang.Nullable;
+import org.openapitools.jackson.nullable.JsonNullable;
+import java.time.OffsetDateTime;
+import jakarta.validation.Valid;
+import jakarta.validation.constraints.*;
+import io.swagger.v3.oas.annotations.media.Schema;
+
+
+import java.util.*;
+import jakarta.annotation.Generated;
+
+/**
+ * Task
+ */
+
+@Generated(value = "org.openapitools.codegen.languages.SpringCodegen", date = "2026-08-08T08:54:10.338848230-06:00[America/Denver]", comments = "Generator version: 7.24.0")
+public class Task {
+
+  private UUID id;
+
+  private String title;
+
+  @JsonInclude(JsonInclude.Include.NON_NULL)
+  private @Nullable String description;
+
+  private Boolean completed;
+
+  @JsonInclude(JsonInclude.Include.NON_NULL)
+  @DateTimeFormat(iso = DateTimeFormat.ISO.DATE_TIME)
+  private @Nullable OffsetDateTime createdAt;
+
+  public Task() {
+    super();
+  }
+
+  /**
+   * Constructor with only required parameters
+   */
+  public Task(UUID id, String title, Boolean completed) {
+    this.id = id;
+    this.title = title;
+    this.completed = completed;
+  }
+
+  public Task id(UUID id) {
+    this.id = id;
+    return this;
+  }
+
+  /**
+   * Get id
+   * @return id
+   */
+  @NotNull @Valid
+  @Schema(name = "id", example = "d3b07384-d113-4956-a5cc-484194fc842d", requiredMode = Schema.RequiredMode.REQUIRED)
+  @JsonProperty("id")
+  public UUID getId() {
+    return id;
+  }
+
+  @JsonProperty("id")
+  public void setId(UUID id) {
+    this.id = id;
+  }
+
+  public Task title(String title) {
+    this.title = title;
+    return this;
+  }
+
+  /**
+   * Get title
+   * @return title
+   */
+  @NotNull
+  @Schema(name = "title", example = "Buy groceries", requiredMode = Schema.RequiredMode.REQUIRED)
+  @JsonProperty("title")
+  public String getTitle() {
+    return title;
+  }
+
+  @JsonProperty("title")
+  public void setTitle(String title) {
+    this.title = title;
+  }
+
+  public Task description(@Nullable String description) {
+    this.description = description;
+    return this;
+  }
+
+  /**
+   * Get description
+   * @return description
+   */
+
+  @Schema(name = "description", example = "Need to pick up milk, eggs, and bread.", requiredMode = Schema.RequiredMode.NOT_REQUIRED)
+  @JsonProperty("description")
+  public @Nullable String getDescription() {
+    return description;
+  }
+
+  @JsonProperty("description")
+  public void setDescription(@Nullable String description) {
+    this.description = description;
+  }
+
+  public Task completed(Boolean completed) {
+    this.completed = completed;
+    return this;
+  }
+
+  /**
+   * Get completed
+   * @return completed
+   */
+  @NotNull
+  @Schema(name = "completed", example = "false", requiredMode = Schema.RequiredMode.REQUIRED)
+  @JsonProperty("completed")
+  public Boolean getCompleted() {
+    return completed;
+  }
+
+  @JsonProperty("completed")
+  public void setCompleted(Boolean completed) {
+    this.completed = completed;
+  }
+
+  public Task createdAt(@Nullable OffsetDateTime createdAt) {
+    this.createdAt = createdAt;
+    return this;
+  }
+
+  /**
+   * Get createdAt
+   * @return createdAt
+   */
+  @Valid
+  @Schema(name = "createdAt", example = "2026-07-31T20:18Z", requiredMode = Schema.RequiredMode.NOT_REQUIRED)
+  @JsonProperty("createdAt")
+  public @Nullable OffsetDateTime getCreatedAt() {
+    return createdAt;
+  }
+
+  @JsonProperty("createdAt")
+  public void setCreatedAt(@Nullable OffsetDateTime createdAt) {
+    this.createdAt = createdAt;
+  }
+
+  @Override
+  public boolean equals(Object o) {
+    if (this == o) {
+      return true;
+    }
+    if (o == null || getClass() != o.getClass()) {
+      return false;
+    }
+    Task task = (Task) o;
+    return Objects.equals(this.id, task.id) &&
+        Objects.equals(this.title, task.title) &&
+        Objects.equals(this.description, task.description) &&
+        Objects.equals(this.completed, task.completed) &&
+        Objects.equals(this.createdAt, task.createdAt);
+  }
+
+  @Override
+  public int hashCode() {
+    return Objects.hash(id, title, description, completed, createdAt);
+  }
+
+  @Override
+  public String toString() {
+    StringBuilder sb = new StringBuilder();
+    sb.append("class Task {\n");
+    sb.append("    id: ").append(toIndentedString(id)).append("\n");
+    sb.append("    title: ").append(toIndentedString(title)).append("\n");
+    sb.append("    description: ").append(toIndentedString(description)).append("\n");
+    sb.append("    completed: ").append(toIndentedString(completed)).append("\n");
+    sb.append("    createdAt: ").append(toIndentedString(createdAt)).append("\n");
+    sb.append("}");
+    return sb.toString();
+  }
+
+  /**
+   * Convert the given object to string with each line indented by 4 spaces
+   * (except the first line).
+   */
+  private String toIndentedString(@Nullable Object o) {
+    return o == null ? "null" : o.toString().replace("\n", "\n    ");
+  }
+}
